--- a/.platform/hooks/predeploy/install
+++ b/.platform/hooks/predeploy/install
@@ -4,10 +4,10 @@ set -e
 
 sudo corepack enable
 
-yarn --cwd typ-server install --production=false
+yarn --cwd server install --production=false
 yarn --cwd game-core-client install --production=false
 yarn --cwd game-core-server install --production=false
 yarn --cwd isaac-four-souls/client install --production=false
 yarn --cwd isaac-four-souls/server install --production=false
 
-yarn --cwd typ-server sequelize db:migrate
+yarn --cwd server sequelize db:migrate
