--- a/.platform/hooks/predeploy/install
+++ b/.platform/hooks/predeploy/install
@@ -5,8 +5,8 @@ set -e
 sudo corepack enable
 
 yarn --cwd server install --production=false
-yarn --cwd game-core-client install --production=false
-yarn --cwd game-core-server install --production=false
+yarn --cwd game-core/client install --production=false
+yarn --cwd game-core/server install --production=false
 yarn --cwd isaac-four-souls/client install --production=false
 yarn --cwd isaac-four-souls/server install --production=false
 
