--- a/.platform/hooks/predeploy/install
+++ b/.platform/hooks/predeploy/install
@@ -6,5 +6,8 @@ rm -rf isaac-four-souls
 
 sudo corepack enable
 
+echo $NODE_ENV
+
 yarn --cwd server install
 yarn --cwd server sequelize db:migrate
+yarn --cwd server cleanup
